--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "wavedb-core",
   "scripts": {
-    "dev": "bun run --hot src/index.ts"
+    "dev": "bun run --hot src/index.ts",
+	"migrate": "prisma migrate dev && prisma generate"
   },
   "dependencies": {
     "@prisma/adapter-pg": "^7.2.0",
@@ -9,9 +10,11 @@
     "@types/node": "^25.0.5",
     "@types/pg": "^8.16.0",
     "dotenv": "^17.2.3",
+    "env-var": "^7.5.0",
     "hono": "^4.10.7",
     "pg": "^8.16.3",
-    "prisma": "^7.2.0"
+    "prisma": "^7.2.0",
+    "zod": "^4.3.5"
   },
   "devDependencies": {
     "@biomejs/biome": "2.3.11",
