--- a/package.json
+++ b/package.json
@@ -1,21 +1,22 @@
 {
   "name": "wavedb-core",
   "author": {
-	"name": "Billal Fauzan",
-	"email": "billal.xcode@gmail.com"
+    "name": "Billal Fauzan",
+    "email": "billal.xcode@gmail.com"
   },
   "version": "0.0.1",
   "description": "WaveDB Core - The core API for WaveDB - an open-source metrics evaluation database",
   "license": "MIT",
   "scripts": {
     "dev": "bun run --hot src/index.ts",
-	"migrate": "prisma migrate dev && prisma generate"
+    "migrate": "prisma migrate dev && prisma generate"
   },
   "dependencies": {
     "@prisma/adapter-pg": "^7.2.0",
     "@prisma/client": "^7.2.0",
     "@types/node": "^25.0.5",
     "@types/pg": "^8.16.0",
+    "better-auth": "^1.4.12",
     "dotenv": "^17.2.3",
     "env-var": "^7.5.0",
     "hono": "^4.10.7",
