style(package.json, constants.ts, auth.controller.ts, metric.controller.ts, project.controller.ts): format code by adding semicolons and consistent indentation for improved readability and maintaining coding standards
refactor(controller): standardize use of semicolons and improve code consistency across controllers
refactor(exceptions): update constructor formatting in error classes for improved readability
refactor(auth): ensure consistent formatting in auth helper and increase readability
refactor(jwt): refactor JWT helper functions for consistency and readability
refactor(prisma): align PrismaClient instantiation with consistent formatting across the codebase

style: standardize import statements formatting and fix semicolon usage across all router and middleware files for improved code consistency

style: format code for better readability by adding missing semicolons and aligning code blocks in multiple services
fix: add missing semicolons and align object properties to follow code style standards across multiple files
style: ensure consistent formatting in validation schemas for better code consistency

style(validation): format code to ensure consistent indentation and spacing across validation schemas
style(tsconfig): simplify paths and exclude sections for better readability and consistency

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,12 +14,8 @@
 		"ignoreDeprecations": "6.0",
 		"baseUrl": ".",
 		"paths": {
-			"@/*": [
-				"src/*"
-			]
+			"@/*": ["src/*"]
 		}
 	},
-	"exclude": [
-		"prisma.config.ts"
-	]
+	"exclude": ["prisma.config.ts"]
 }
