--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
 		"dotenv": "^17.2.3",
 		"env-var": "^7.5.0",
 		"hono": "^4.10.7",
+		"minio": "^8.0.6",
 		"pg": "^8.16.3",
 		"prisma": "^7.2.0",
 		"zod": "^4.3.5"
